# webscrapers

./: .gitignore  README.md  pyproject.toml
src/: wayfair-open-box.py
