[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = "Suite of webscrapers for personal use"
authors = ["Benjamin Stout <stoutb@spu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
requests-html = "^0.10.0"
selenium = "^4.7.2"
selenium-stealth = "^1.0.6"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
